-- ==============================
-- 1) TABLAS BASE para gestión académica de la UES viva chafin jandal
-- que tarde por dios xd y tengo sueño ya no se me ocurren más tablas xd y quiero comida 
-- ==============================

CREATE TABLE TIPOFIN (
    TIPOFIN    NUMBER(4),
    NOMBREFIN  VARCHAR2(200 BYTE),
    CONSTRAINT TIPOFIN_PK PRIMARY KEY (TIPOFIN)
);

CREATE TABLE ALUMNO (
    CARNET          VARCHAR2(10 BYTE),
    NOMBRES         VARCHAR2(100 BYTE),
    APELLIDOS       VARCHAR2(200 BYTE),
    FECHANACIMIENTO DATE,
    DUI             VARCHAR2(20 BYTE),
    SEXO            VARCHAR2(1 BYTE),
    CONSTRAINT ALUMNO_PK PRIMARY KEY (CARNET),
    CONSTRAINT ALUMNO_DUI UNIQUE (DUI)
);

CREATE TABLE CARRERA (
    CODIGOCARRERA VARCHAR2(20 BYTE),
    NOMBRE        VARCHAR2(200 BYTE),
    CONSTRAINT CARRERA_PK PRIMARY KEY (CODIGOCARRERA)
);

CREATE TABLE PLANCARRERA (
    CODIGOCARRERA VARCHAR2(20 BYTE),
    PLANCARRERA   NUMBER(4),
    CONSTRAINT PLANCARRERA_PK PRIMARY KEY (CODIGOCARRERA, PLANCARRERA),
    CONSTRAINT PLANCARRERA_FKCARRERA FOREIGN KEY (CODIGOCARRERA)
        REFERENCES CARRERA(CODIGOCARRERA)
);

CREATE TABLE MATERIA (
    CODIGOCARRERA  VARCHAR2(20 BYTE),
    PLANCARRERA    NUMBER(4),
    CODIGOMATERIA  VARCHAR2(20 BYTE),
    NOMBRE         VARCHAR2(200 BYTE),
    UV             NUMBER(4),
    CICLO          VARCHAR2(10 BYTE),
    CONSTRAINT MATERIA_PK PRIMARY KEY (CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA),
    CONSTRAINT MATERIA_FKPLANCARRERA FOREIGN KEY (CODIGOCARRERA, PLANCARRERA)
        REFERENCES PLANCARRERA(CODIGOCARRERA, PLANCARRERA)
);

CREATE TABLE PERTENECE (
    CARNET         VARCHAR2(10 BYTE),
    CODIGOCARRERA  VARCHAR2(20 BYTE),
    PLANCARRERA    NUMBER(4),
    FECHAINICIO    DATE,
    FECHAFIN       DATE,
    TIPOFIN        NUMBER(4),
    CONSTRAINT PERTENECE_PK PRIMARY KEY (CARNET, CODIGOCARRERA, PLANCARRERA),
    CONSTRAINT PERTENECE_FKALUMNO FOREIGN KEY (CARNET)
        REFERENCES ALUMNO(CARNET),
    CONSTRAINT PERTENECE_FKPLANCARRERA FOREIGN KEY (CODIGOCARRERA, PLANCARRERA)
        REFERENCES PLANCARRERA(CODIGOCARRERA, PLANCARRERA),
    CONSTRAINT PERTENECE_FKTIPOFIN FOREIGN KEY (TIPOFIN)
        REFERENCES TIPOFIN(TIPOFIN)
);

-- ==============================
-- 2) INSCRIPCION Y EQUIVALENCIAS 
-- bueno esto es para llevar el control de las inscripciones a
-- grupos de clase y las equivalencias de materias para los alumnos
-- así como la gestión de los periodos académicos y los grupos de clase.
-- dejen de copiarme el scrip hagan el suyo xd
-- ==============================

CREATE TABLE PERIODO_ACADEMICO (
    IDPERIODO      NUMBER(8),
    ANIO           NUMBER(4) NOT NULL,
    CICLO          NUMBER(1) NOT NULL,
    FECHAINICIO    DATE NOT NULL,
    FECHAFIN       DATE NOT NULL,
    ESTADO         VARCHAR2(20 BYTE) DEFAULT 'PLANIFICADO' NOT NULL,
    CONSTRAINT PERIODO_ACADEMICO_PK PRIMARY KEY (IDPERIODO),
    CONSTRAINT PERIODO_ACADEMICO_UK UNIQUE (ANIO, CICLO),
    CONSTRAINT PERIODO_ACADEMICO_CK1 CHECK (CICLO IN (1, 2, 3)),
    CONSTRAINT PERIODO_ACADEMICO_CK2 CHECK (ESTADO IN ('PLANIFICADO', 'ACTIVO', 'CERRADO')),
    CONSTRAINT PERIODO_ACADEMICO_CK3 CHECK (FECHAINICIO <= FECHAFIN)
);

CREATE TABLE GRUPO_CLASE (
    IDGRUPO        NUMBER(10),
    IDPERIODO      NUMBER(8) NOT NULL,
    CODIGOCARRERA  VARCHAR2(20 BYTE) NOT NULL,
    PLANCARRERA    NUMBER(4) NOT NULL,
    CODIGOMATERIA  VARCHAR2(20 BYTE) NOT NULL,
    NUMEROGRUPO    VARCHAR2(10 BYTE) NOT NULL,
    DOCENTE        VARCHAR2(200 BYTE),
    CUPO_MAXIMO    NUMBER(4) DEFAULT 40 NOT NULL,
    MODALIDAD      VARCHAR2(20 BYTE) DEFAULT 'PRESENCIAL' NOT NULL,
    CONSTRAINT GRUPO_CLASE_PK PRIMARY KEY (IDGRUPO),
    CONSTRAINT GRUPO_CLASE_UK UNIQUE (IDPERIODO, CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA, NUMEROGRUPO),
    CONSTRAINT GRUPO_CLASE_FKPERIODO FOREIGN KEY (IDPERIODO)
        REFERENCES PERIODO_ACADEMICO(IDPERIODO),
    CONSTRAINT GRUPO_CLASE_FKMATERIA FOREIGN KEY (CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA)
        REFERENCES MATERIA(CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA),
    CONSTRAINT GRUPO_CLASE_CK1 CHECK (CUPO_MAXIMO > 0),
    CONSTRAINT GRUPO_CLASE_CK2 CHECK (MODALIDAD IN ('PRESENCIAL', 'VIRTUAL', 'MIXTA'))
);

CREATE TABLE INSCRIPCION_GRUPO (
    IDINSCRIPCION    NUMBER(12),
    CARNET           VARCHAR2(10 BYTE) NOT NULL,
    IDGRUPO          NUMBER(10) NOT NULL,
    FECHAINSCRIPCION DATE DEFAULT SYSDATE NOT NULL,
    ESTADO           VARCHAR2(20 BYTE) DEFAULT 'INSCRITO' NOT NULL,
    NOTAFINAL        NUMBER(5,2),
    CONSTRAINT INSCRIPCION_GRUPO_PK PRIMARY KEY (IDINSCRIPCION),
    CONSTRAINT INSCRIPCION_GRUPO_UK UNIQUE (CARNET, IDGRUPO),
    CONSTRAINT INSCRIPCION_GRUPO_FKALUMNO FOREIGN KEY (CARNET)
        REFERENCES ALUMNO(CARNET),
    CONSTRAINT INSCRIPCION_GRUPO_FKGRUPO FOREIGN KEY (IDGRUPO)
        REFERENCES GRUPO_CLASE(IDGRUPO),
    CONSTRAINT INSCRIPCION_GRUPO_CK1 CHECK (ESTADO IN ('INSCRITO', 'RETIRADO', 'APROBADO', 'REPROBADO')),
    CONSTRAINT INSCRIPCION_GRUPO_CK2 CHECK (NOTAFINAL IS NULL OR (NOTAFINAL >= 0 AND NOTAFINAL <= 10))
);

CREATE TABLE EQUIVALENCIA_MATERIA (
    IDEQUIVALENCIA    NUMBER(12),
    CARNET            VARCHAR2(10 BYTE) NOT NULL,
    CODIGOCARRERA     VARCHAR2(20 BYTE) NOT NULL,
    PLANCARRERA       NUMBER(4) NOT NULL,
    CODIGOMATERIA     VARCHAR2(20 BYTE) NOT NULL,
    INSTITUCION_ORIGEN VARCHAR2(200 BYTE) NOT NULL,
    MATERIA_ORIGEN    VARCHAR2(200 BYTE) NOT NULL,
    NOTA_ORIGEN       NUMBER(5,2),
    FECHARESOLUCION   DATE NOT NULL,
    ESTADO            VARCHAR2(20 BYTE) DEFAULT 'APROBADA' NOT NULL,
    CONSTRAINT EQUIVALENCIA_MATERIA_PK PRIMARY KEY (IDEQUIVALENCIA),
    CONSTRAINT EQUIVALENCIA_MATERIA_UK UNIQUE (CARNET, CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA),
    CONSTRAINT EQUIVALENCIA_MATERIA_FKALUMNO FOREIGN KEY (CARNET)
        REFERENCES ALUMNO(CARNET),
    CONSTRAINT EQUIVALENCIA_MATERIA_FKMATERIA FOREIGN KEY (CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA)
        REFERENCES MATERIA(CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA),
    CONSTRAINT EQUIVALENCIA_MATERIA_CK1 CHECK (ESTADO IN ('APROBADA', 'RECHAZADA', 'PENDIENTE')),
    CONSTRAINT EQUIVALENCIA_MATERIA_CK2 CHECK (NOTA_ORIGEN IS NULL OR (NOTA_ORIGEN >= 0 AND NOTA_ORIGEN <= 10))
);

-- ==============================
-- 3) DOCENTES Y ACTIVIDADES que sueño xd
-- ==============================

CREATE TABLE DOCENTE (
    IDDOCENTE      NUMBER(10),
    NOMBRES        VARCHAR2(100 BYTE) NOT NULL,
    APELLIDOS      VARCHAR2(200 BYTE) NOT NULL,
    DUI            VARCHAR2(20 BYTE),
    CORREO         VARCHAR2(200 BYTE),
    ESTADO         VARCHAR2(20 BYTE) DEFAULT 'ACTIVO' NOT NULL,
    CONSTRAINT DOCENTE_PK PRIMARY KEY (IDDOCENTE),
    CONSTRAINT DOCENTE_DUI_UK UNIQUE (DUI),
    CONSTRAINT DOCENTE_CORREO_UK UNIQUE (CORREO),
    CONSTRAINT DOCENTE_ESTADO_CK CHECK (ESTADO IN ('ACTIVO', 'INACTIVO'))
);

CREATE TABLE DOCENTE_MATERIA (
    IDDOCENTE          NUMBER(10),
    CODIGOCARRERA      VARCHAR2(20 BYTE),
    PLANCARRERA        NUMBER(4),
    CODIGOMATERIA      VARCHAR2(20 BYTE),
    NIVELHABILITACION  VARCHAR2(20 BYTE) DEFAULT 'TITULAR' NOT NULL,
    FECHAALTA          DATE DEFAULT SYSDATE NOT NULL,
    CONSTRAINT DOCENTE_MATERIA_PK PRIMARY KEY (IDDOCENTE, CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA),
    CONSTRAINT DOCENTE_MATERIA_FKDOCENTE FOREIGN KEY (IDDOCENTE)
        REFERENCES DOCENTE(IDDOCENTE),
    CONSTRAINT DOCENTE_MATERIA_FKMATERIA FOREIGN KEY (CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA)
        REFERENCES MATERIA(CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA),
    CONSTRAINT DOCENTE_MATERIA_CK1 CHECK (NIVELHABILITACION IN ('TITULAR', 'AUXILIAR', 'SUPLENTE'))
);

CREATE TABLE GRUPO_DOCENTE (
    IDGRUPO    NUMBER(10),
    IDDOCENTE  NUMBER(10),
    ROL        VARCHAR2(20 BYTE) DEFAULT 'TITULAR' NOT NULL,
    CONSTRAINT GRUPO_DOCENTE_PK PRIMARY KEY (IDGRUPO, IDDOCENTE),
    CONSTRAINT GRUPO_DOCENTE_FKGRUPO FOREIGN KEY (IDGRUPO)
        REFERENCES GRUPO_CLASE(IDGRUPO),
    CONSTRAINT GRUPO_DOCENTE_FKDOCENTE FOREIGN KEY (IDDOCENTE)
        REFERENCES DOCENTE(IDDOCENTE),
    CONSTRAINT GRUPO_DOCENTE_CK1 CHECK (ROL IN ('TITULAR', 'AUXILIAR', 'SUPLENTE'))
);

CREATE TABLE ACTIVIDAD_GRUPO (
    IDACTIVIDAD      NUMBER(12),
    IDGRUPO          NUMBER(10) NOT NULL,
    NOMBRE           VARCHAR2(200 BYTE) NOT NULL,
    TIPOACTIVIDAD    VARCHAR2(30 BYTE) NOT NULL,
    PONDERACION      NUMBER(5,2) NOT NULL,
    FECHA_PROGRAMADA DATE,
    ESTADO           VARCHAR2(20 BYTE) DEFAULT 'ACTIVA' NOT NULL,
    CONSTRAINT ACTIVIDAD_GRUPO_PK PRIMARY KEY (IDACTIVIDAD),
    CONSTRAINT ACTIVIDAD_GRUPO_FKGRUPO FOREIGN KEY (IDGRUPO)
        REFERENCES GRUPO_CLASE(IDGRUPO),
    CONSTRAINT ACTIVIDAD_GRUPO_CK1 CHECK (TIPOACTIVIDAD IN ('EXAMEN', 'LABORATORIO', 'PROYECTO', 'TAREA', 'QUIZ', 'OTRA')),
    CONSTRAINT ACTIVIDAD_GRUPO_CK2 CHECK (PONDERACION > 0 AND PONDERACION <= 100),
    CONSTRAINT ACTIVIDAD_GRUPO_CK3 CHECK (ESTADO IN ('ACTIVA', 'CERRADA', 'ANULADA'))
);

CREATE TABLE NOTA_ACTIVIDAD (
    IDACTIVIDAD    NUMBER(12),
    IDINSCRIPCION  NUMBER(12),
    NOTA           NUMBER(5,2),
    FECHAREGISTRO  DATE DEFAULT SYSDATE NOT NULL,
    OBSERVACION    VARCHAR2(500 BYTE),
    CONSTRAINT NOTA_ACTIVIDAD_PK PRIMARY KEY (IDACTIVIDAD, IDINSCRIPCION),
    CONSTRAINT NOTA_ACTIVIDAD_FKACTIVIDAD FOREIGN KEY (IDACTIVIDAD)
        REFERENCES ACTIVIDAD_GRUPO(IDACTIVIDAD),
    CONSTRAINT NOTA_ACTIVIDAD_FKINSCRIPCION FOREIGN KEY (IDINSCRIPCION)
        REFERENCES INSCRIPCION_GRUPO(IDINSCRIPCION),
    CONSTRAINT NOTA_ACTIVIDAD_CK1 CHECK (NOTA IS NULL OR (NOTA >= 0 AND NOTA <= 10))
);

-- ==============================
-- 4) INDICES  ya no se me ocurre nada más xd 
-- se creo los indices para optimizar consultas como los machos jjaja
-- ==============================

CREATE INDEX IDX_GRUPO_MATERIA
    ON GRUPO_CLASE (CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA, IDPERIODO);

CREATE INDEX IDX_INSCRIPCION_CARNET
    ON INSCRIPCION_GRUPO (CARNET, IDGRUPO);

CREATE INDEX IDX_EQUIV_CARNET_MATERIA
    ON EQUIVALENCIA_MATERIA (CARNET, CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA, ESTADO);

CREATE INDEX IDX_DOCENTE_MATERIA_DOCENTE
    ON DOCENTE_MATERIA (IDDOCENTE, CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA);

CREATE INDEX IDX_ACTIVIDAD_GRUPO
    ON ACTIVIDAD_GRUPO (IDGRUPO, ESTADO);

CREATE INDEX IDX_NOTA_ACTIVIDAD_INSCRIPCION
    ON NOTA_ACTIVIDAD (IDINSCRIPCION, IDACTIVIDAD);
