// ==============================
// 1) TABLAS BASE
// ==============================

Table TIPOFIN {
  TIPOFIN int [pk]
  NOMBREFIN varchar(200)
}

Table ALUMNO {
  CARNET varchar(10) [pk]
  NOMBRES varchar(100)
  APELLIDOS varchar(200)
  FECHANACIMIENTO date
  DUI varchar(20) [unique]
  SEXO varchar(1)
}

Table CARRERA {
  CODIGOCARRERA varchar(20) [pk]
  NOMBRE varchar(200)
}

Table PLANCARRERA {
  CODIGOCARRERA varchar(20)
  PLANCARRERA int

  indexes {
    (CODIGOCARRERA, PLANCARRERA) [pk]
  }
}

Table MATERIA {
  CODIGOCARRERA varchar(20)
  PLANCARRERA int
  CODIGOMATERIA varchar(20)
  NOMBRE varchar(200)
  UV int
  CICLO varchar(10)

  indexes {
    (CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA) [pk]
  }
}

Table PERTENECE {
  CARNET varchar(10)
  CODIGOCARRERA varchar(20)
  PLANCARRERA int
  FECHAINICIO date
  FECHAFIN date
  TIPOFIN int

  indexes {
    (CARNET, CODIGOCARRERA, PLANCARRERA) [pk]
  }
}

// ==============================
// 2) INSCRIPCION Y EQUIVALENCIAS
// ==============================

Table PERIODO_ACADEMICO {
  IDPERIODO int [pk]
  ANIO int
  CICLO int
  FECHAINICIO date
  FECHAFIN date
  ESTADO varchar(20)

  indexes {
    (ANIO, CICLO) [unique]
  }
}

Table GRUPO_CLASE {
  IDGRUPO int [pk]
  IDPERIODO int
  CODIGOCARRERA varchar(20)
  PLANCARRERA int
  CODIGOMATERIA varchar(20)
  NUMEROGRUPO varchar(10)
  DOCENTE varchar(200)
  CUPO_MAXIMO int
  MODALIDAD varchar(20)

  indexes {
    (IDPERIODO, CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA, NUMEROGRUPO) [unique]
  }
}

Table INSCRIPCION_GRUPO {
  IDINSCRIPCION int [pk]
  CARNET varchar(10)
  IDGRUPO int
  FECHAINSCRIPCION date
  ESTADO varchar(20)
  NOTAFINAL float

  indexes {
    (CARNET, IDGRUPO) [unique]
  }
}

Table EQUIVALENCIA_MATERIA {
  IDEQUIVALENCIA int [pk]
  CARNET varchar(10)
  CODIGOCARRERA varchar(20)
  PLANCARRERA int
  CODIGOMATERIA varchar(20)
  INSTITUCION_ORIGEN varchar(200)
  MATERIA_ORIGEN varchar(200)
  NOTA_ORIGEN float
  FECHARESOLUCION date
  ESTADO varchar(20)

  indexes {
    (CARNET, CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA) [unique]
  }
}

// ==============================
// 3) DOCENTES Y ACTIVIDADES
// ==============================

Table DOCENTE {
  IDDOCENTE int [pk]
  NOMBRES varchar(100)
  APELLIDOS varchar(200)
  DUI varchar(20) [unique]
  CORREO varchar(200) [unique]
  ESTADO varchar(20)
}

Table DOCENTE_MATERIA {
  IDDOCENTE int
  CODIGOCARRERA varchar(20)
  PLANCARRERA int
  CODIGOMATERIA varchar(20)
  NIVELHABILITACION varchar(20)
  FECHAALTA date

  indexes {
    (IDDOCENTE, CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA) [pk]
  }
}

Table GRUPO_DOCENTE {
  IDGRUPO int
  IDDOCENTE int
  ROL varchar(20)

  indexes {
    (IDGRUPO, IDDOCENTE) [pk]
  }
}

Table ACTIVIDAD_GRUPO {
  IDACTIVIDAD int [pk]
  IDGRUPO int
  NOMBRE varchar(200)
  TIPOACTIVIDAD varchar(30)
  PONDERACION float
  FECHA_PROGRAMADA date
  ESTADO varchar(20)
}

Table NOTA_ACTIVIDAD {
  IDACTIVIDAD int
  IDINSCRIPCION int
  NOTA float
  FECHAREGISTRO date
  OBSERVACION varchar(500)

  indexes {
    (IDACTIVIDAD, IDINSCRIPCION) [pk]
  }
}

// ==============================
// RELACIONES (FK)
// ==============================

Ref: PLANCARRERA.CODIGOCARRERA > CARRERA.CODIGOCARRERA

Ref: MATERIA.(CODIGOCARRERA, PLANCARRERA) > PLANCARRERA.(CODIGOCARRERA, PLANCARRERA)

Ref: PERTENECE.CARNET > ALUMNO.CARNET
Ref: PERTENECE.(CODIGOCARRERA, PLANCARRERA) > PLANCARRERA.(CODIGOCARRERA, PLANCARRERA)
Ref: PERTENECE.TIPOFIN > TIPOFIN.TIPOFIN

Ref: GRUPO_CLASE.IDPERIODO > PERIODO_ACADEMICO.IDPERIODO
Ref: GRUPO_CLASE.(CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA) > MATERIA.(CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA)

Ref: INSCRIPCION_GRUPO.CARNET > ALUMNO.CARNET
Ref: INSCRIPCION_GRUPO.IDGRUPO > GRUPO_CLASE.IDGRUPO

Ref: EQUIVALENCIA_MATERIA.CARNET > ALUMNO.CARNET
Ref: EQUIVALENCIA_MATERIA.(CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA) > MATERIA.(CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA)

Ref: DOCENTE_MATERIA.IDDOCENTE > DOCENTE.IDDOCENTE
Ref: DOCENTE_MATERIA.(CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA) > MATERIA.(CODIGOCARRERA, PLANCARRERA, CODIGOMATERIA)

Ref: GRUPO_DOCENTE.IDGRUPO > GRUPO_CLASE.IDGRUPO
Ref: GRUPO_DOCENTE.IDDOCENTE > DOCENTE.IDDOCENTE

Ref: ACTIVIDAD_GRUPO.IDGRUPO > GRUPO_CLASE.IDGRUPO

Ref: NOTA_ACTIVIDAD.IDACTIVIDAD > ACTIVIDAD_GRUPO.IDACTIVIDAD
Ref: NOTA_ACTIVIDAD.IDINSCRIPCION > INSCRIPCION_GRUPO.IDINSCRIPCION